# Q3VIBEZ

./: AGENTS.md  README.md  meson.build  meson.options
.github/workflows/: build.yml
archive/documents/: BUILD.md
archive/documents/docs/: quake3e-changes.txt
build-support/meson/sources/: meson.build
code/client/: keycodes.h
code/renderer2/: qgl.h
code/renderercommon/vulkan/: vulkan_core.h
code/sdl/: sdl_gamma.c  sdl_glimp.c  sdl_glw.h  sdl_input.c  sdl_snd.c
src/engine/cgame/: cg_public.h
src/engine/client/: cl_keys.cpp  cl_main.cpp  client.h  snd_local.h  snd_main.cpp  snd_openal.cpp
src/engine/game/: g_public.h
src/engine/qcommon/: q_shared.h
src/engine/sdl/: sdl_glimp.cpp  sdl_input.cpp
src/engine/ui/: ui_public.h
src/engine/win32/: win_glimp.cpp  win_local.h  win_wndproc.cpp
src/game/: meson.build
src/game/cgame/: cg_consolecmds.cpp  cg_draw.cpp  cg_drawtools.cpp  cg_effects.cpp  cg_ents.cpp  cg_event.cpp  cg_info.cpp  cg_local.h  cg_localents.cpp  cg_main.cpp  cg_marks.cpp  cg_particles.cpp  cg_players.cpp  cg_playerstate.cpp  cg_predict.cpp  cg_public.h  cg_scoreboard.cpp  cg_servercmds.cpp  cg_snapshot.cpp  cg_syscalls.cpp  cg_view.cpp  cg_weapons.cpp
src/game/q3_ui/: ui_addbots.cpp  ui_atoms.cpp  ui_cdkey.cpp  ui_cinematics.cpp  ui_confirm.cpp  ui_connect.cpp  ui_controls2.cpp  ui_demo2.cpp  ui_gameinfo.cpp  ui_loadconfig.cpp  ui_local.h  ui_network.cpp  ui_options.cpp  ui_players.cpp  ui_playersettings.cpp  ui_preferences.cpp  ui_removebots.cpp  ui_saveconfig.cpp  ui_serverinfo.cpp  ui_servers2.cpp  ui_setup.cpp  ui_sound.cpp  ui_specifyserver.cpp  ui_spreset.cpp  ui_spskill.cpp  ui_startserver.cpp  ui_syscalls.cpp  ui_team.cpp  ui_teamorders.cpp  ui_video.cpp
src/game/sgame/: ai_dmq3.cpp  bg_lib.cpp  bg_misc.cpp  bg_public.h  g_active.cpp  g_arenas.cpp  g_bot.cpp  g_client.cpp  g_cmds.cpp  g_combat.cpp  g_items.cpp  g_local.h  g_main.cpp  g_mem.cpp  g_misc.cpp  g_missile.cpp  g_mover.cpp  g_public.h  g_rotation.cpp  g_session.cpp  g_spawn.cpp  g_svcmds.cpp  g_syscalls.cpp  g_target.cpp  g_team.cpp  g_team.h  g_utils.cpp  g_weapon.cpp  q_math.cpp  q_shared.h
src/game/ui/: ui_gameinfo.cpp  ui_local.h  ui_main.cpp  ui_public.h  ui_shared.cpp  ui_shared.h  ui_syscalls.cpp
subprojects/openal-soft/: meson.build
subprojects/openal-soft-upstream/alc/effects/: reverb.cpp
subprojects/sdl3/: meson.build
subprojects/sdl3-upstream/: .meson-subproject-wrap-hash.txt
